Fix footer and textarea overlap bug

--- a/css/index.css
+++ b/css/index.css
@@ -83,10 +83,12 @@ button.dark-theme {
     display: inline-block;
     pointer-events: none;
     font-size: clamp(15px, 1.5vw, 20px);
+    background-color: var(--bkg-color);
+    color: var(--text-color);
 }
 
 #wordCounter{
-    color: var(--text-color);
+    /*color: var(--text-color);*/
     /*font-size: 15px;*/
     float: right;
     /*position: fixed;*/
@@ -95,14 +97,14 @@ button.dark-theme {
 }
 
 #memoryCounter{
-    color: var(--text-color);
+    /*color: var(--text-color);*/
     /*font-size: 15px;*/
     /*position: fixed;*/
     /*bottom: 55px;*/
     /*right: 40px;*/
 }
 #clock{
-    color: var(--text-color);
+    /*color: var(--text-color);*/
     /*font-size: 15px;*/
     float: left;
     /*position: fixed;*/
